# Hyperliquid-Strategy-Platform

./: .gitignore  DESIGN_DOCUMENT.md  PLUGIN_GUIDE.md  README.md  config.toml  demo_config.toml  failure_demo.py  pyproject.toml  wallet_balance.py  wallet_liquidate.py
plugins/: crasher.py  looper.py  market_maker.py  mean_reversion.py
strategy_platform/: __init__.py  __main__.py  config.py  core.py
strategy_platform/contract/: context.py  orders.py  plugin.py
strategy_platform/services/: market_data.py  observability.py  order_manager.py  order_router.py  order_store.py  risk_guard.py
tests/: _fixture_plugins.py  test_config.py  test_integration_testnet.py  test_live_order_manager.py  test_market_data.py  test_mock_order_manager.py  test_observability.py  test_order_router.py  test_order_store.py  test_platform_core.py  test_plugins.py  test_risk_guard.py  test_testnet_response_parsing.py
